--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container-fluid text-center bg-dark text-white justify-content-center align-items-center hero" >
         <h1>PORTFOLIO</h1>
+        <p>hello my name is Jiya Jain</p>
       </div>
 </body>
 </html>
