--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
           Get to know My Proffessional Identity
         </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">01</a></li>
-          <li><a class="dropdown-item" href="#">01</a></li>
-          <li><a class="dropdown-item" href="#">01</a></li>
+          <li><a class="dropdown-item" href="#">project 1</a></li>
+          <li><a class="dropdown-item" href="#">project 2</a></li>
+          <li><a class="dropdown-item" href="#">project 3</a></li>
+          <li><a class="dropdown-item" href="#">project 4</a></li>
+          <li><a class="dropdown-item" href="#">project 5</a></li>
         </ul>
       </div>
 
@@ -157,18 +159,20 @@
         </div>
     </section>
     
-    <footer class="text-white py-4 hero2">
-        <div class="container-fluid">
+    <footer class="text-white py-4 ">
+        <div class="container-fluid p-5 text-white text-left align-items-center justify-content-left d-flex hero2 ">
             <div class="row">
                 <div class="col-md-12 text-left">
                     <p><i class="fas fa-envelope me-2"></i> 
-                        <a href="mailto:your-email@example.com" class="text-white text-decoration-none">your-email@example.com</a>
+                        <a href="mailto:jjiya2207@gmail.com" class="text-white text-decoration-none">
+                             Email: jjiya2207@gmail.com</a>
                     </p>
                     <p><i class="fas fa-phone me-2"></i> 
-                        <a href="tel:+919876543210" class="text-white text-decoration-none">+91 98765 43210</a>
+                        <a href="9829083965" class="text-white text-decoration-none">Contact number: 9829083965</a>
                     </p>
                     <p><i class="fab fa-linkedin me-2"></i> 
-                        <a href="https://www.linkedin.com/in/yourprofile" class="text-white text-decoration-none" target="_blank">linkedin.com/in/yourprofile</a>
+                        <a href="https://www.linkedin.com/in/jiya-jain-80a6812b9/" class="text-white text-decoration-none" 
+                        target="_blank"> Linkedin Profile: https://www.linkedin.com/in/jiya-jain-80a6812b9/</a>
                     </p>
                 </div>
             </div>
