--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     
     <div class="dropdown">
-        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-          Get to know My Proffessional Identity
+        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
+          Know More!
         </button>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="#">project 1</a></li>
@@ -33,8 +33,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <h2 style="padding: 0px 0px 0px ;margin-top:-5px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri,
-                        'Trebuchet MS',sans-serif; font-size:40px;">About Me</h2>
+                        <h2 style="padding: 0px 0px 0px ;margin-top:-5px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:40px;">About Me</h2>
                         <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
                         font-size:15px;padding-bottom:-70px;"> 
                             I'm an aspiring graphic designer passionate about creating visually appealing designs that tell a story.
@@ -74,17 +73,17 @@
     </div>
     
     <section id="projects" class="container py-5">
-        <h2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri,'Trebuchet MS', sans-serif;font-weight: 300; padding: 10px;" 
+        <h2 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;font-weight: 300; padding: 10px;" 
         class="text-center">PROJECTS</h2>
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
                     <img src="images/Screenshot 2025-03-18 150521.png" class="card-img-top" alt="Project 1">
                     <div class="card-body">
-                        <h5 style= "font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: medium;font-weight: 700;" 
+                        <h5 style= "font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;font-size: medium;font-weight: 700;" 
                         class="card-title">Magazine</h5>
                         <p class="card-text" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
-                        sans-serif; font-size: small;">This magazine explores the deep-rooted superstitions in 
+                        sans-serif; font-size: 14px;">This magazine explores the deep-rooted superstitions in 
                         Indian society, their impact—both positive and negative—and how they shape beliefs, 
                         traditions, and modern thinking. It questions whether they are sacred cultural treasures 
                         or outdated myths, encouraging readers to reflect on their role in today’s world</p>
@@ -95,10 +94,10 @@
                 <div class="card">
                     <img src="images/uno2.png" class="card-img-top" alt="Project 2">
                     <div class="card-body">
-                        <h5  style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: medium;font-weight: 700;" 
+                        <h5  style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;font-size: medium;font-weight: 700;" 
                         class="card-title">Packging and UNO Card Design</h5>
                         <p class="card-text" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
-                        sans-serif; font-size: small;">By adding unique, customized characters to each card, the game becomes more 
+                        sans-serif; font-size: 14px;">By adding unique, customized characters to each card, the game becomes more 
                             engaging.Enhancing UNO cards by incorporating personalized characters increase 
                             their visual appeal.These characters are designed to reflect the personalities of the 
                             particular colours.The redesign of the UNO introduces colour-themed characters 
@@ -112,10 +111,10 @@
                 <div class="card">
                     <img src="images/Screenshot 2025-03-18 145844.png" class="card-img-top" alt="Project 2">
                     <div class="card-body">
-                        <h5  style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: medium;font-weight: 700;" 
+                        <h5  style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;font-size: medium;font-weight: 700;" 
                         class="card-title">Logo Design 1</h5>
                         <p class="card-text" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
-                        sans-serif; font-size: small;"> “Afsaane Reimagined” transforms the traditional book launch into an 
+                        sans-serif; font-size: 14px;"> “Afsaane Reimagined” transforms the traditional book launch into an 
                         immersive, interactive experience. It bridges the gap between skilled 
                         creatives and compelling narratives, offering authors’ works as 
                         inspiration for films, plays, and art.This event fosters collaboration, 
@@ -130,10 +129,10 @@
                 <div  class="card">
                     <img src="images/Coffee_Brand_Mockup_1.png" class="card-img-top" alt="Project 3">
                     <div class="card-body">
-                        <h5  style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: medium;font-weight: 700;" 
+                        <h5  style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;font-size: medium;font-weight: 700;" 
                         class="card-title">Logo Design 2</h5>
                         <p class="card-text" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
-                        sans-serif; font-size: small;"> Made a logo for a coffee shop named‘Cosmo’
+                        sans-serif; font-size: 14px;"> Made a logo for a coffee shop named‘Cosmo’
                             The cup handle in the logo depicts the letter ‘C’ and the ‘coffee bean’ 
                             at the tip of the steam coming out of the cup,adds to the aesthetic of 
                             the logo.I went with color shades of brown to match the coffee.</p>
@@ -145,10 +144,10 @@
                 <div class="card">
                     <img src="images/Poster-mockup4.png" class="card-img-top" alt="Project 2">
                     <div class="card-body">
-                        <h5  style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: medium;font-weight: 700;" 
+                        <h5  style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;font-size: medium;font-weight: 700;" 
                         class="card-title">Movie Poster</h5>
                         <p class="card-text" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
-                        sans-serif; font-size: small;">This typographic poster for “Andhadhun” uses a striking contrast of 
+                        sans-serif; font-size: 14px;">This typographic poster for “Andhadhun” uses a striking contrast of 
                             black and white to symbolize the difference between a blind person and a sighted one.
                             The piano tiles,arranged across the poster, represent the film’s central motif of 
                             music and percetion.The alternating black and white tiles visually mimic the contrast 
@@ -164,15 +163,18 @@
             <div class="row">
                 <div class="col-md-12 text-left">
                     <p><i class="fas fa-envelope me-2"></i> 
-                        <a href="mailto:jjiya2207@gmail.com" class="text-white text-decoration-none">
+                        <a href="mailto:jjiya2207@gmail.com" class="text-white text-decoration-none" 
+                        style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 13px;">
                              Email: jjiya2207@gmail.com</a>
                     </p>
                     <p><i class="fas fa-phone me-2"></i> 
-                        <a href="9829083965" class="text-white text-decoration-none">Contact number: 9829083965</a>
-                    </p>
+                        <a href="9829083965" class="text-white text-decoration-none" 
+                        style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 13px;">
+                        Contact number: 9829083965</a></p>
                     <p><i class="fab fa-linkedin me-2"></i> 
                         <a href="https://www.linkedin.com/in/jiya-jain-80a6812b9/" class="text-white text-decoration-none" 
-                        target="_blank"> Linkedin Profile: https://www.linkedin.com/in/jiya-jain-80a6812b9/</a>
+                        target="_blank" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
+                        font-size: 13px;"> Linkedin Profile: https://www.linkedin.com/in/jiya-jain-80a6812b9/</a>
                     </p>
                 </div>
             </div>
