--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <h2 style="padding: 0px 0px 0px ;margin-top:-5px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:40px;">About Me</h2>
                         <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
                         font-size:15px;padding-bottom:-70px;"> 
-                            I'm an aspiring graphic designer passionate about creating visually appealing designs that tell a story.
+                            Hello!I'm Jiya Jain an aspiring graphic designer passionate about creating visually appealing designs that tell a story.
                             Being a daughter to an artist, I have been fascinated by the creative world since my early years.
                             I’m 19 and an aspiring graphic designer driven by the endless love of creation. 
                             I create my own ideas and give them a visual appeal.</p>
