--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         </ul>
       </div>
 
-    <div class="container-fluid p-5 text-white text-center align-items-center justify-content-center d-flex hero">
-        <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size:120px;
-        font-weight: 700;">DESIGN<br>PORTFOLIO</h1>
+      <div class="container-fluid text-center bg-black text-white py-5">
+        <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;" 
+        class="display-4 fw-bold text-uppercase">Design Portfolio</h1>
     </div>
+    
     
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
         <section class="about-me">
