--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
           Know More!
         </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">project 1</a></li>
-          <li><a class="dropdown-item" href="#">project 2</a></li>
-          <li><a class="dropdown-item" href="#">project 3</a></li>
-          <li><a class="dropdown-item" href="#">project 4</a></li>
-          <li><a class="dropdown-item" href="#">project 5</a></li>
+          <li><a class="dropdown-item" href="#">Project 1</a></li>
+          <li><a class="dropdown-item" href="#">Project 2</a></li>
+          <li><a class="dropdown-item" href="#">Project 3</a></li>
+          <li><a class="dropdown-item" href="#">Project 4</a></li>
+          <li><a class="dropdown-item" href="#">Project 5</a></li>
         </ul>
       </div>
 
       <h1 class="fw-bold text-uppercase text-white text-center hero">
-        <span class="display-2 d-none d-lg-block" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Design<br> Portfolio</span> 
-        <span class="display-3 d-none d-md-block d-lg-none" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Design <br> Portfolio</span>
-        <span class="display-5 d-block d-md-none" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Design <br> Portfolio</span>
+        <span class="display-2 d-none d-lg-block" style="font-weight: 900;">Design <br> Portfolio</span> 
+        <span class="display-3 d-none d-md-block d-lg-none" style="font-weight: 900;">Design <br> Portfolio</span>
+        <span class="display-4 d-block d-md-none" style="font-weight: 900;">Design <br> Portfolio</span>
     </h1>
     
     
@@ -36,7 +36,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <h2 style="padding: 0px 0px 0px ;margin-top:-5px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:40px;">About Me</h2>
+                        <h2 style="padding: 0px 0px 0px ;margin-top:-5px; font-family: Cambria, Cochin, Georgia, Times,
+                        'Times New Roman', serif; font-size:40px;">About Me</h2>
                         <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
                         font-size:15px;padding-bottom:-70px;"> 
                             Hello!I'm Jiya Jain an aspiring graphic designer passionate about creating visually appealing designs that tell a story.
