--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <h1 class="fw-bold text-uppercase text-white text-center hero">
         <div class="py-4 py-md-6 py-lg-7 text-center">
         
-        <span class="display-2 d-none d-lg-block" style="font-weight: 900;">Design Portfolio</span> 
-        <span class="display-3 d-none d-md-block d-lg-none" style="font-weight: 900;">Design Portfolio</span>
-        <span class="display-4 d-block d-md-none" style="font-weight: 900;">Design Portfolio</span>
+        <span class="display-2 d-none d-lg-block" style="font-weight: 900;">Design <br> Portfolio</span> 
+        <span class="display-3 d-none d-md-block d-lg-none" style="font-weight: 900;">Design <br> Portfolio</span>
+        <span class="display-4 d-block d-md-none" style="font-weight: 900;">Design <br> Portfolio</span>
     </div>
     </h1>
 
